--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
     }
     .board {
       position: relative;
-      width: 100%;
-      max-width: 200px;
+      width: 800px;
+      height: 800px;
+      max-width: 800px;
       margin: 0 auto;
       background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
