--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ saffee
     TRAIN: 'https://i.postimg.cc/CxsvYQJJ/CSPORTS-NEWS.png',
     NUKE: 'https://i.postimg.cc/xC3jPYPM/CSPORTS-NEWS.png',
     ANCIENT: 'https://i.postimg.cc/rshrQ591/CSPORTS-NEWS.png',
-    OVERPASS: 'https://i.postimg.cc/jSPbkKRJ/OVERPASS1.png',
+    OVERPASS: 'https://i.postimg.cc/vZkvDFnX/OVERPASS.png',
     MIRAGE: 'https://i.postimg.cc/x8HdbH4j/CSPORTS-NEWS.png'
   };
 
