--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 <div class="controls">
   <!-- Inputs -->
-  <label>Название турнира:<input type="text" id="tournamentInput" value="IEM COLOGNE 2025 STAGE 1" /></label>
+  <label>Название турнира:<input type="text" id="tournamentInput" value="IEM COLOGNE 2025" /></label>
   <label>URL логотипа слева:<input type="text" id="logoLeftInput" value="https://i.postimg.cc/FKc97q4Q/2.png" /></label>
   <label>URL логотипа справа:<input type="text" id="logoRightInput" value="https://i.postimg.cc/XvWbxBm9/5555.png" /></label>
   <label>Счёт первой команды:<input type="number" id="score1Input" /></label>
